fix(ui): prevent long content type to overflow

--- a/packages/studio-ui/src/web/views/FlowBuilder/common/style.scss
+++ b/packages/studio-ui/src/web/views/FlowBuilder/common/style.scss
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   color: var(--shark);
+  max-width: 300px;
 
   .icon {
     padding: var(--spacing-x-small);
@@ -82,6 +83,7 @@
     line-height: 1.25;
     overflow: hidden;
     white-space: nowrap;
+    text-overflow: ellipsis;
 
     span {
       padding: 2px 4px;
